# cnc-router-esp32

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini
components/: esp32_magicsee_r1  httprequest  sdcard  sdcard-storage  shiftload  spiffs-storage  websocket  wifi
data/web/: index.appcache  index.html
data/web/g/e/: f1.gcode  f2.gcode  f2.ncr.gcode  f3.gcode  f3.ncr.gcode  f4.gcode  f4.ncr.gcode  f5.gcode  f5.ncr.gcode  steps.gcode  tc.gcode  tl.gcode  tr.gcode
server/: .gitignore  error.html  index.html  main.js  style.css
src/: ActionMove.cpp  ActionMove.hpp  Axe.cpp  Axe.hpp  CMakeLists.txt  CncRouter.cpp  CncRouter.hpp  CncRouter_gcode.cpp  CoordSystem.cpp  CoordSystem.hpp  Geometry.cpp  Geometry.hpp  InputInterrupt.cpp  InputInterrupt.hpp  Plasma.cpp  Plasma.hpp  StepDriver.cpp  StepDriver.hpp  defines.hpp  main.cpp
src/gcode/: GCode.cpp  GCode.hpp  GCodeCR.cpp  GCodeCR.hpp  GCodeCRP.hpp
